# ChangeLog for gnome-extra/gnome-utils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-extra/gnome-utils/ChangeLog,v 1.177 2009/05/11 23:13:37 eva Exp $

*gnome-utils-2.26.0 (11 May 2009)

  11 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -gnome-utils-2.18.1.ebuild, -gnome-utils-2.20.0.1.ebuild,
  -gnome-utils-2.24.0.ebuild, +gnome-utils-2.26.0.ebuild:
  New version for GNOME 2.26. Reduce libgnome/libgnomeui usage, drop
  remaining libart* calls. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-utils-2.24.1.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-utils-2.24.1:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gnome-utils-2.24.1.ebuild:
  arm stable

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-utils-2.24.1.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gnome-utils-2.24.1.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnome-utils-2.24.1.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-utils-2.24.1.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-utils-2.24.1.ebuild:
  Marking gnome-utils-2.24.1 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-utils-2.24.1.ebuild:
  Marking gnome-utils-2.24.1 ppc64 stable for bug 260063

  12 Jan 2009; Raúl Porcel <armin76@gentoo.org> gnome-utils-2.24.1.ebuild:
  Add ~arm/~sh

*gnome-utils-2.24.1 (22 Oct 2008)

  22 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +gnome-utils-2.24.1.ebuild:
  bump to 2.24.1. Bug fix in baobab and screenshot, translation updates.

*gnome-utils-2.24.0 (19 Oct 2008)

  19 Oct 2008; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-utils-2.18.1.ebuild, +gnome-utils-2.24.0.ebuild: