@@ -4,13 +4,13 @@ Hash: SHA1
 DIST gnome-utils-2.24.1.tar.bz2 6410784 RMD160 e7acaff8418eb62eb5e61f2ba52ecea5b753212f SHA1 8d0315293da2f646a67cb8025099d00ba8fbbeac SHA256 6b7e29feaa25d5e85fa55a00775e7b3296725ef98b455b8b1d810cf379cfdd00
 DIST gnome-utils-2.26.0.tar.bz2 6882359 RMD160 7ef1bc0d7a497135426fa79505726b50acb75547 SHA1 ac1078ad2d75a561f7aa562d06316a221d6dcbc4 SHA256 8407acc4f1839d86157d4eb19406cb8c0762729af8d0ddcc288844ffc9ecb120
 EBUILD gnome-utils-2.24.1.ebuild 1242 RMD160 be4c998f1bcfad27a0ae4ae2c68331751f295c6d SHA1 0e792ddd50d7f423f9fe9d1bf993aa632758cfc6 SHA256 48611b25eee54d8ebad31a6b7c82ba0879feb8e5afb6aa38c1468083f4a2dbf5
-EBUILD gnome-utils-2.26.0.ebuild 1343 RMD160 bf1647931754bbc1016f4609d5044cfe170d92e2 SHA1 84db76a0418159fa4ee54ef0b159ce073e91b255 SHA256 804b8f8249568cef33371ff6f2e88cd1e0d6d1ff6787bf4c8ca1e9ade4349ee9
-MISC ChangeLog 22187 RMD160 a5f5a1490e5b593d2d2d02becd8c4d85377404e2 SHA1 7440e12df67581f7330cd05d47037144cc871de5 SHA256 d1275fc0fcd0e233795f151eb4fa0eed0104abd5ec2fc29748702f1bbea310b2
+EBUILD gnome-utils-2.26.0.ebuild 1452 RMD160 c6820d4cae7dc2a923963271854e9863f0e4129d SHA1 c8307084272dd08233443ced28a9f5b47977334e SHA256 012cf2b47d8a782ccad1a045c03904a3287c7b5cefb129a5ce27d679398dd01f
+MISC ChangeLog 22317 RMD160 8e9c3a1348078ab3193018af19e6b59d7cb20bec SHA1 b6d3b1d6d875992c39d7dc0e6c26ef96ed1d9d8c SHA256 db94479305c2e9fca7714adec569d00ef6e20f8e04d57c99de000a6a16ebe13a
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoIsScACgkQ1fmVwcYIWAab/wCfR7z7N62jWmuJidFfsmJsOSZa
-o5IAoJlO+jUvHdu75NfylGBFTc3rzJsp
-=7OEj
+iEYEARECAAYFAkqcMfkACgkQ1fmVwcYIWAYP9ACfe+TeeMFjiKvYCm3V9H5Pruoi
+G6QAn3PaYzycVhnhLzeG4OLESNGo1UZj
+=oQL3
 -----END PGP SIGNATURE-----
